--- a/frontend/pages/user/[userId]/task/task.module.scss
+++ b/frontend/pages/user/[userId]/task/task.module.scss
@@ -1,11 +1,17 @@
-.container {
-  width: 60%;
-  height: 60vh;
-  margin: 20vh auto;
-  padding: 20px;
+.parent-container {
+  display: flex;
+  width: 80%;
+  height: 80vh;
+  margin: 10vh auto;
   background-color: #d5d5d5;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.user-task-container {
+  flex: 7;
+  // margin: auto;
+  border: 1px solid #ccc;
 }
 
 .title {
